fix build issue

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,7 +16,8 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"allowJs": true
+		"allowJs": true,
+        "types": ["node", "express"]
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "dist"]
